# CVtool

./: .gitignore  CMakeLists.txt  CVTool.code-workspace  Makefile  arch.mak  common.mak  gettext.mak  main.cpp
includes/: data_structures.h  draw_controller.h  draw_model.h  draw_thumbnail.h  gl_uavv_image.h  klv_panel.h  klv_view.h  main_panel.h  plot_drawer.h  plot_panel.h  render_panel.h  resources.h  thumbnail_widget.h  thumbnails_controller.h  uavv_image.h  uavv_klv.h  uavv_video.h  uavv_wrapper.h  ui_controller.h  video_player.h  xloader.h  zoom_panel.h  zoom_view.h
mathgl/include/mgl2/: build.h  config.h
res/: main_panel.cxx  main_panel.fl  main_panel.h  renderer_panel.fl  renderer_panel.txt  zoom_panel.cxx  zoom_panel.fl  zoom_panel.h
src/: draw_controller.cpp  draw_model.cpp  draw_thumbnail.cxx  jsoncpp.cpp  klv_panel.cxx  klv_view.cxx  main.cpp  main_panel.cxx  plot_drawer.cpp  plot_panel.cxx  render_panel.cxx  thumbnail_widget.cxx  thumbnails_controller.cpp  uavv_wrapper.cpp  ui_controller.cpp  video_player.cpp  xloader.c  zoom_panel.cxx  zoom_view.cxx
